added swagger api documentation
